# Paramancer

./: .gitignore  FUTURE_PLANS.md  pyproject.toml
paramancer/: __init__.py  types.py
paramancer/bloptim/: __init__.py  _mixins.py  implicit.py  lower.py  neumann.py  param_step.py  parameter.py  step.py  temp.py  types.py
paramancer/bloptim/implicit/: __init__.py  _mixins.py  diff.py  optimizer.py  step.py
paramancer/bloptim/unrolled/: __init__.py  optimizer.py
paramancer/operators/: __init__.py  _docstrings.py  _util.py  grad.py  imaging.py  linalg.py  norms.py  prox.py
paramancer/optim/: __init__.py  optimizer.py  scheduler.py  step.py  types.py  typing.py  util.py  variable.py
paramancer/variable/: __init__.py  _mixins.py  flat.py  inner.py  pair.py  parameter.py  types.py  util.py  variable.py
tests/: util.py
tests/bloptim/: test_implicit.py  test_lower.py  test_neumann.py  test_step.py  test_unrolled.py
tests/operators/: test_grad.py  test_linalg.py  test_norms.py  test_prox.py
tests/optim/: test_optimizer.py  test_step.py  test_variable.py
tests/variable/: test_parameter.py  test_variable.py
