    [project]
    name = "paramancer"
    version = "0.1.0"
    keywords = [
        "optimization", "first-order", "proximal", "bilevel", "pytorch"
    ]
    classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Topic :: Scientific/Engineering :: Mathematics",
    ]
    description = "A clean and modular library for smooth and non-smooth first-order optimization algorithms"
    authors = [
        { name="Sheheryar Mehmood", email="sheheryar.m9@gmail.com" }
    ]
    license = { file = "LICENSE" }
    readme = "README.md"
    requires-python = ">=3.8"
    dependencies = [
        "torch>=2.0",
        "numpy"
    ]

    [project.urls]
    Homepage = "https://github.com/sheheryarmehmood/Paramancer"
    Repository = "https://github.com/sheheryarmehmood/Paramancer"

    [build-system]
    requires = ["setuptools>=61.0"]
    build-backend = "setuptools.build_meta"
